# sdl3-project-template

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
